--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="description" content="Professional portfolio showcasing my work, skills, and experience in a retro style.">
     <meta name="keywords" content="portfolio, web developer, designer, projects, skills, experience, retro">
     <title>My Retro Portfolio</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>JOHN DOE<span class="terminal-cursor"></span></h1>
+        <h1>Aishwary Gathe<span class="terminal-cursor"></span></h1>
         <div class="header-controls">
             <div class="theme-switch-wrapper">
                 <label class="theme-switch" for="checkbox">
