--- a/thankyou.html
+++ b/thankyou.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You | My Portfolio</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         /* Variables for theme switching */
         :root {
@@ -68,7 +68,7 @@
     <div class="thank-you-container">
         <h1>THANK YOU!</h1>
         <p>Your message has been sent successfully. I'll get back to you as soon as possible.</p>
-        <a href="/index.html" class="back-button">RETURN TO PORTFOLIO</a>
+        <a href="index.html" class="back-button">RETURN TO PORTFOLIO</a>
     </div>
     
     <script>
