--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional portfolio showcasing my work, skills, and experience in a retro style.">
     <meta name="keywords" content="portfolio, web developer, designer, projects, skills, experience, retro">
-    <title>My Retro Portfolio</title>
+    <title>Hey This me Aishwary Gathe</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
